--add-modules is incompatible with java8, but needed when we start building java11 binaries